--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.16",
+    "emoji-mart": "^5.5.2",
+    "postcss": "^8.4.31",
+    "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email-editor": "^1.7.9",
+    "react-icons": "^4.11.0",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "sortablejs": "^1.15.0",
+    "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
