--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "postcss": "^8.4.31",
     "quill": "^1.3.6",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-email-editor": "^1.7.9",
     "react-icons": "^4.11.0",
